//==========================================================================
//
// History file for EvtGen
//
//===========================================================================

13th October 2016 John Back
    Added the TauolaCurrentOption decfile keyword to select the hadronic 
    current in Tauola; default is the BaBar-tuned current option (int = 1).
    EvtParticles can store double attributes using the functions 
    setAttributeDouble(name, double) and getAttributeDouble(name), which can
    be useful for storing and retrieving amplitude weights, for example.
    The analogous EvtParticle integer attribute interface remains unchanged:
    setAttribute(name, int) and getAttribute(name).

13th September 2016 John Back
    Modified EvtTauolaEngine to use internal Tauola spin matrices for 
    tau pair events by temporarily setting the PDG id of the mother as a
    boson, keeping the same 4-momentum. The BaBar hadronic currents are now 
    used by default. Also added the ability to change some Tauola parameters 
    using the "Define" keyword in decay files. Added an example decay file
    illustrating the new features: validation/TauolaFiles/Btautau.dec

9th September 2016 Michal Kreps
    Reimplement code in EvtBTo3pi.F, EvtBTo3piMPP.F, EvtBTo3piP00.F and 
    EvtBToKpipi.F in C++ in order to remove dependence on Fortran compiler.
    With this, there is no internal Fortran code in EvtGen.

R01-06-00-------------------------------------------------------------------
1st June 2016 John Back
    New tag incorporating all changes below. Recommended external packages
    are HepMC 2.06.09, pythia 8.186, Photos++ 3.61 and Tauola++ 1.1.5.

28th April 2016 Michal Kreps
    For Ds+ --> 2pi+ pi- there was double counting of branching fraction
    resulting in total branching fraction being 1.5 times larger than measured
    one. Fix by revisiting submodes, which now fill total Ds --> 3pi.

25th April 2016 Michal Kreps